feat: add living room schedule entities
- Delete problematic room_schedule_dashboard.yaml
- Create living_room_schedule.yaml with room-specific entities
- Update deployment.yaml to include living room schedule
- Update schedule-configmap.yaml with living room entities
- Add 17 new entities: 1 boolean, 10 datetime, 6 select inputs
- Follow GitOps principles by updating manifests for ArgoCD sync

--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -156,6 +156,9 @@ spec:
               automation ui: !include automations.yaml
               script: !include scripts.yaml
               scene: !include scenes.yaml
+              
+              # Living room schedule configuration
+              !include schedule/living_room_schedule.yaml
 
               # Schedule configuration
               input_boolean:
