feat: implement room schedule system with default inheritance
- Update living room schedule to use default schedule values
- Create generate-room-schedule.sh script for room-specific schedules
- Add room_overrides.yaml for per-room customizations
- Update schedule-configmap.yaml with corrected living room schedule
- Add comprehensive README-schedule-system.md documentation
- Support for 5 time periods with scene selection
- Automatic room icon assignment
- YAML parsing for override values with comment handling

--- a/gitops/apps/home-assistant/schedule-configmap.yaml
+++ b/gitops/apps/home-assistant/schedule-configmap.yaml
@@ -126,6 +126,7 @@ data:
       #     scene_suffix: "energize"
   living_room_schedule.yaml: |
     # Living Room Schedule Configuration
+    # Uses default schedule values with room-specific overrides
     input_boolean:
       living_room_schedule_enabled:
         name: "Living Room Schedule Enabled"
@@ -138,61 +139,61 @@ data:
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"
+        initial: "06:00"  # Default: 06:00
       living_room_schedule_1_end:
         name: "Living Room Morning End"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "10:00"
+        initial: "09:00"  # Default: 09:00
       living_room_schedule_2_start:
         name: "Living Room Day Start"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "10:00"
+        initial: "09:00"  # Default: 09:00
       living_room_schedule_2_end:
         name: "Living Room Day End"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "18:00"
+        initial: "17:00"  # Default: 17:00
       living_room_schedule_3_start:
         name: "Living Room Evening Start"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "18:00"
+        initial: "17:00"  # Default: 17:00
       living_room_schedule_3_end:
         name: "Living Room Evening End"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "22:00"
+        initial: "21:00"  # Default: 21:00
       living_room_schedule_4_start:
         name: "Living Room Night Start"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "22:00"
+        initial: "21:00"  # Default: 21:00
       living_room_schedule_4_end:
         name: "Living Room Night End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"
+        initial: "23:00"  # Default: 23:00
       living_room_schedule_5_start:
         name: "Living Room Late Night Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"
+        initial: "23:00"  # Default: 23:00
       living_room_schedule_5_end:
         name: "Living Room Late Night End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"
+        initial: "06:00"  # Default: 06:00
 
     input_select:
       living_room_schedule_1_scene:
@@ -205,7 +206,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "energize"
+        initial: "energize"  # Default: energize
       living_room_schedule_2_scene:
         name: "Living Room Day Scene"
         icon: mdi:weather-sunny
@@ -216,7 +217,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "concentrate"
+        initial: "concentrate"  # Default: concentrate
       living_room_schedule_3_scene:
         name: "Living Room Evening Scene"
         icon: mdi:weather-sunset
@@ -227,7 +228,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"
+        initial: "relax"  # Default: relax
       living_room_schedule_4_scene:
         name: "Living Room Night Scene"
         icon: mdi:weather-night
@@ -238,7 +239,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"
+        initial: "nightlight"  # Default: nightlight
       living_room_schedule_5_scene:
         name: "Living Room Late Night Scene"
         icon: mdi:weather-sunrise
@@ -249,7 +250,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "dimmed"
+        initial: "nightlight"  # Default: nightlight
       living_room_default_scene:
         name: "Living Room Default Scene"
         icon: mdi:sofa
@@ -260,5 +261,5 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"
+        initial: "relax"  # Default: relax
 
