--- a/gitops/apps/home-assistant/bathroom-configmap.yaml
+++ b/gitops/apps/home-assistant/bathroom-configmap.yaml
@@ -1,95 +1,86 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ha-living-room-config
+  name: ha-bathroom-config
   namespace: home-assistant
   annotations:
     reloader.stakater.com/auto: "true"
 data:
-  living_room_schedule.yaml: |
-    # Living Room Schedule Configuration
-    # Uses default schedule values with room-specific overrides
+  bathroom_schedule.yaml: |
+    [0;34m[INFO][0m Generating schedule for room: bathroom
+    # Bathroom Schedule Configuration
+    # Generated from default schedule with room-specific overrides
     input_boolean:
-      living_room_schedule_enabled:
-        name: "Living Room Schedule Enabled"
-        icon: mdi:sofa
+      bathroom_schedule_enabled:
+        name: "Bathroom Schedule Enabled"
+        icon: mdi:shower
         initial: true
-
+    
     input_datetime:
-      living_room_schedule_1_start:
-        name: "Living Room Morning Start"
+      bathroom_schedule_1_start:
+        name: "Bathroom Morning Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
         initial: "06:00"  # Default: 06:00
-      living_room_schedule_1_end:
-        name: "Living Room Morning End"
+      bathroom_schedule_1_end:
+        name: "Bathroom Morning End"
+        icon: mdi:weather-sunrise
+        has_time: true
+        has_date: false
+        initial: "09:00"  # Default: 09:00
+      bathroom_schedule_2_start:
+        name: "Bathroom Day Start"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
         initial: "09:00"  # Default: 09:00
-      living_room_schedule_2_start:
-        name: "Living Room Day Start"
+      bathroom_schedule_2_end:
+        name: "Bathroom Day End"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
-      living_room_schedule_2_end:
-        name: "Living Room Day End"
+        initial: "17:00"  # Default: 17:00
+      bathroom_schedule_3_start:
+        name: "Bathroom Evening Start"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
         initial: "17:00"  # Default: 17:00
-      living_room_schedule_3_start:
-        name: "Living Room Evening Start"
+      bathroom_schedule_3_end:
+        name: "Bathroom Evening End"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
-      living_room_schedule_3_end:
-        name: "Living Room Evening End"
+        initial: "21:00"  # Default: 21:00
+      bathroom_schedule_4_start:
+        name: "Bathroom Night Start"
         icon: mdi:weather-night
         has_time: true
         has_date: false
         initial: "21:00"  # Default: 21:00
-      living_room_schedule_4_start:
-        name: "Living Room Night Start"
+      bathroom_schedule_4_end:
+        name: "Bathroom Night End"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
-      living_room_schedule_4_end:
-        name: "Living Room Night End"
+        initial: "23:00"  # Default: 23:00
+      bathroom_schedule_5_start:
+        name: "Bathroom Late Night Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
         initial: "23:00"  # Default: 23:00
-      living_room_schedule_5_start:
-        name: "Living Room Late Night Start"
-        icon: mdi:weather-sunrise
-        has_time: true
-        has_date: false
-        initial: "23:00"  # Default: 23:00
-      living_room_schedule_5_end:
-        name: "Living Room Late Night End"
+      bathroom_schedule_5_end:
+        name: "Bathroom Late Night End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
         initial: "06:00"  # Default: 06:00
-
+    
     input_select:
-      room_schedule_selector:
-        name: "Select Room to Configure"
-        icon: mdi:home-edit
-        options:
-          - "living_room"
-          - "kitchen"
-          - "bedroom"
-          - "bathroom"
-          - "hallway"
-        initial: "living_room"
-      living_room_schedule_1_scene:
-        name: "Living Room Morning Scene"
+      bathroom_schedule_1_scene:
+        name: "Bathroom Morning Scene"
         icon: mdi:weather-sunrise
         options:
           - "energize"
@@ -99,8 +90,8 @@ data:
           - "read"
           - "dimmed"
         initial: "energize"  # Default: energize
-      living_room_schedule_2_scene:
-        name: "Living Room Day Scene"
+      bathroom_schedule_2_scene:
+        name: "Bathroom Day Scene"
         icon: mdi:weather-sunny
         options:
           - "energize"
@@ -110,8 +101,8 @@ data:
           - "read"
           - "dimmed"
         initial: "concentrate"  # Default: concentrate
-      living_room_schedule_3_scene:
-        name: "Living Room Evening Scene"
+      bathroom_schedule_3_scene:
+        name: "Bathroom Evening Scene"
         icon: mdi:weather-sunset
         options:
           - "energize"
@@ -121,8 +112,8 @@ data:
           - "read"
           - "dimmed"
         initial: "relax"  # Default: relax
-      living_room_schedule_4_scene:
-        name: "Living Room Night Scene"
+      bathroom_schedule_4_scene:
+        name: "Bathroom Night Scene"
         icon: mdi:weather-night
         options:
           - "energize"
@@ -132,8 +123,8 @@ data:
           - "read"
           - "dimmed"
         initial: "nightlight"  # Default: nightlight
-      living_room_schedule_5_scene:
-        name: "Living Room Late Night Scene"
+      bathroom_schedule_5_scene:
+        name: "Bathroom Late Night Scene"
         icon: mdi:weather-sunrise
         options:
           - "energize"
@@ -143,9 +134,9 @@ data:
           - "read"
           - "dimmed"
         initial: "nightlight"  # Default: nightlight
-      living_room_default_scene:
-        name: "Living Room Default Scene"
-        icon: mdi:sofa
+      bathroom_default_scene:
+        name: "Bathroom Default Scene"
+        icon: mdi:shower
         options:
           - "energize"
           - "concentrate"
