--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -309,10 +309,10 @@ spec:
                 cleanup_old_photos: 'find /config/www/pets -name "*.jpg" -mtime +30 -delete && find /config/www/intruders -name "*.jpg" -mtime +30 -delete'
               EOF
               
-              # Append living room configuration
+              # Append schedule entities configuration
               echo "" >> "${CONFIG_DIR}/configuration.yaml"
-              echo "# Living room schedule configuration" >> "${CONFIG_DIR}/configuration.yaml"
-              cat /config/living-room/living_room_schedule.yaml >> "${CONFIG_DIR}/configuration.yaml"
+              echo "# Schedule entities for all rooms" >> "${CONFIG_DIR}/configuration.yaml"
+              cat /config/schedule/schedule_entities.yaml >> "${CONFIG_DIR}/configuration.yaml"
               
               # Create empty files for scripts, scenes, and automations
               echo "[]" > "${CONFIG_DIR}/scripts.yaml"
@@ -328,9 +328,6 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
-            - name: living-room-config
-              mountPath: /config/living-room
-              readOnly: true
         - name: validate-config
           image: ghcr.io/home-assistant/home-assistant:stable
           imagePullPolicy: IfNotPresent
@@ -418,9 +415,6 @@ spec:
             - name: schedule-config
               mountPath: /config/schedule
               readOnly: true
-            - name: living-room-config
-              mountPath: /config/living-room
-              readOnly: true
           lifecycle:
             preStop:
               exec:
@@ -438,6 +432,3 @@ spec:
         - name: schedule-config
           configMap:
             name: ha-schedule-config
-        - name: living-room-config
-          configMap:
-            name: ha-living-room-config
