--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -328,6 +328,9 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
+            - name: schedule-config
+              mountPath: /config/schedule
+              readOnly: true
         - name: validate-config
           image: ghcr.io/home-assistant/home-assistant:stable
           imagePullPolicy: IfNotPresent
